--- a/GroupManagement/src/main/resources/application.properties
+++ b/GroupManagement/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-
+# -----------------------
+# Server
+# -----------------------
+server.port = 8080
+server.hostName = localhost
+server.protocol = http
 # -----------------------
 # Database
 # -----------------------
@@ -38,7 +43,34 @@ spring.jpa.properties.hibenate.jdbc.time_zone=UTC
 # -----------------------
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=project.testingsystem@gmail.com
-spring.mail.password=testingsystem
+spring.mail.username=giang.mink@gmail.com
+spring.mail.password=Giang@123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# -----------------------
+# JWT
+# -----------------------
+# login
+jwt.token.prefix=Bearer
+jwt.token.authorization=Authorization
+# 30 minutes
+jwt.token.expired-time=1800000
+jwt.token.secret=123456
+# 123456 base64 encode
+# 10 days
+jwt.refresh-token.expired-time=864000000
+# reset password (30 minutes)
+reset-password.token.expired-time=1800000
+registration.token.expired-time=1800000
+
+# -----------------------
+# Upload File
+# -----------------------
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
+
+# -----------------------
+# Link Resources
+# -----------------------
+folder.resource = src/main/resources
