--- a/GroupManagement/src/main/resources/application.properties
+++ b/GroupManagement/src/main/resources/application.properties
@@ -43,7 +43,7 @@ spring.jpa.properties.hibenate.jdbc.time_zone=UTC
 # -----------------------
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=tanhtuan509@gmail.com
+spring.mail.username=anhtuantranhy@gmail.com
 spring.mail.password=0359497174
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -55,7 +55,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 jwt.token.prefix=Bearer
 jwt.token.authorization=Authorization
 # 30 minutes
-jwt.token.expired-time=6000000
+jwt.token.expired-time=1800000
 jwt.token.secret=MTIzNDU2
 # 123456 base64 encode
 # 10 days
